# omni.play

./: .gitignore  .gitmodules  .travis.yml  Makefile  Makefile.mac  Makefile.watershed  README.md  README.txt  TAGS  TODO  bootstrap-stage-001.pl  bootstrap-stage-002.pl  bootstrap-stage-003.pl  bootstrap-stage-004.pl  bootstrap-stage-005.pl  bootstrap-stage-006.pl  bootstrap.pl  bootstrap.py  data.cpp  get_lastest.sh  main.cpp  mapped_data.cpp  merge.pl  omni.common.kdev4  omni.common.pro  omni.play.files  omni.play.includes  omni.server.pro  rebuildOmniProFile.pl  storage_client.hpp  storage_manager.hpp  storage_server.hpp  storage_type.hpp
omni/: CMakeLists.txt  CMakeLists.txt.template  COPYRIGHT.txt  Makefile  Makefile.watershed  README  TAGS  cmake_install.cmake  omni.pro  rebuildOmniProFile.pl
omni/docs/: BUGS  buildNotes.txt  colors.ods  googlePerfTools.txt  style  svn.odt
omni/docs/doxygen/: Doxyfile
omni/docs/hdf5/: hdf5_merge.pro
omni/include/vmmlib/: axisAlignedBoundingBox.h  matrix4.h  serialization.h  vector3.h
omni/lib/: CMakeLists.txt
omni/modules/: FindHDF5.cmake  FindOmQt.cmake  FindOmVTK.cmake  FindUnixQt.cmake
omni/src/: CMakeLists.txt  main.cpp  mainpage.h
omni/src/_template_/: CMakeLists.txt  example.cpp  example.h  main.cpp  singleton.cpp  singleton.h
omni/src/actions/: omActions.cpp  omActions.h  omActions.hpp  omActionsImpl.cpp  omActionsImpl.h  omProjectSaveAction.cpp  omProjectSaveAction.h  omProjectSaveActionImpl.hpp  omSegmentGroupAction.cpp  omSegmentGroupAction.h  omSegmentGroupActionImpl.hpp  omSegmentJoinAction.cpp  omSegmentJoinAction.h  omSegmentJoinActionImpl.hpp  omSegmentSelectAction.cpp  omSegmentSelectAction.h  omSegmentSelectActionImpl.hpp  omSegmentSplitAction.cpp  omSegmentSplitAction.h  omSegmentUncertainAction.cpp  omSegmentUncertainAction.h  omSegmentUncertainActionImpl.hpp  omSegmentValidateAction.cpp  omSegmentValidateAction.h  omSegmentationThresholdChangeAction.cpp  omSegmentationThresholdChangeAction.h  omSegmentationThresholdChangeActionImpl.hpp  omSelectSegmentParams.hpp  omVoxelSetValueAction.cpp  omVoxelSetValueAction.h  omVoxelSetValueActionImpl.hpp
omni/src/annotation/: annotation.h  omAnnotation.cpp  omAnnotation.hpp  omAnnotationYaml.hpp
omni/src/chunks/: omChunk.cpp  omChunk.h  omChunkCache.hpp  omChunkCoord.cpp  omChunkCoord.h  omChunkData.cpp  omChunkData.h  omChunkDataImpl.hpp  omChunkDataInterface.hpp  omChunkItemContainer.hpp  omChunkItemContainerMatrix.hpp  omChunkMipping.hpp  omChunkTypes.hpp  omChunkUtils.hpp  omProcessChunkVoxelBoundingData.hpp  omRawChunk.hpp  omRawChunkMemMapped.hpp  omRawChunkSlicer.hpp  omSegChunk.cpp  omSegChunk.h  omSegChunkData.cpp  omSegChunkData.h  omSegChunkDataImpl.hpp  omSegChunkDataVisitors.hpp
omni/src/common/: CMakeLists.txt  om.hpp  omBoost.h  omColors.cpp  omColors.h  omCommon.cpp  omCommon.h  omContainer.hpp  omDebug.cpp  omDebug.h  omException.cpp  omException.h  omGl.cpp  omGl.h  omLocalPreferences.cpp  omMath.hpp  omQt.cpp  omQt.h  omSerialization.h  omSet.hpp  omStd.cpp  omStd.h  omStoppable.h  omString.hpp  omThreads.h  omUtility.h  omVtk.h
omni/src/datalayer/: omDataArchiveBoost.cpp  omDataArchiveCoords.cpp  omDataArchiveMipChunk.cpp  omDataArchiveProject.cpp  omDataArchiveQT.cpp  omDataArchiveSegment.cpp  omDataLayer.cpp  omDataLayer.h  omDataPath.cpp  omDataPath.h  omDataPaths.cpp  omDataPaths.h  omDataReader.h  omDataVolumeBase.hpp  omDataWrapper.h  omDataWriter.h  omDummyWriter.cpp  omDummyWriter.h  omHDF5Volume.cpp  omHDF5Volume.hpp  omHdf5.cpp  omHdf5.h  omHdf5Dataset.cpp  omHdf5Dataset.h  omHdf5Helpers.cpp  omHdf5Helpers.h  omHdf5LowLevel.cpp  omHdf5LowLevel.h  omHdf5LowLevelWrappersAutoOpenClose.cpp  omHdf5LowLevelWrappersAutoOpenClose.h  omHdf5LowLevelWrappersManualOpenClose.cpp  omHdf5LowLevelWrappersManualOpenClose.h  omHdf5Manager.cpp  omHdf5Manager.h  omHdf5Reader.cpp  omHdf5Reader.h  omHdf5Writer.cpp  omHdf5Writer.h  omIDataReader.h  omIDataVolume.hpp  (+3 more)
omni/src/events/: omEventManager.cpp  omEventManager.h  omEvents.cpp  omEvents.h  omKeyPressEventListener.h  omPreferenceEvent.cpp  omPreferenceEvent.h  omProgressEvent.h  omSegmentEvent.cpp  omSegmentEvent.h  omToolModeEvent.h  omView3dEvent.cpp  omView3dEvent.h  omViewEvent.h
omni/src/gui/: CMakeLists.txt  cacheMonitorDialog.cpp  cacheMonitorDialog.h  cacheMonitorWidget.cpp  cacheMonitorWidget.h  chanInspector.cpp  chanInspector.h  dataWrappers.cpp  dataWrappers.h  elementListBox.cpp  elementListBox.h  filObjectInspector.cpp  filObjectInspector.h  glview.cpp  glview.h  groupsTable.cpp  groupsTable.h  guiUtils.cpp  guiUtils.h  guiUtils.hpp  headless.cpp  headless.h  inspectorProperties.cpp  inspectorProperties.h  main.cpp  mainpage.h  mainwindow.cpp  mainwindow.h  menubar.cpp  menubar.h  mstViewer.cpp  mstViewer.hpp  myInspectorWidget.cpp  myInspectorWidget.h  omImageDialog.h  omSegmentContextMenu.cpp  omSegmentContextMenu.h  omSegmentListWidget.cpp  omSegmentListWidget.h  omTreeWidget.cpp  (+52 more)
omni/src/headless/: headless.cpp  headless.h  headlessImpl.hpp
omni/src/landmarks/: omLandmarks.hpp  omLandmarksDialog.h  omLandmarksTypes.cpp  omLandmarksWidgetButtons.hpp
omni/src/mesh/: CMakeLists.txt  main.cpp  meshingChunkThread.cpp  meshingChunkThread.h  meshingChunkThreadManager.cpp  meshingChunkThreadManager.h  meshingManager.cpp  meshingManager.h  omDrawOptions.h  omMesh.cpp  omMesh.h  omMeshCoord.cpp  omMeshCoord.h  omMeshDrawer.cpp  omMeshDrawer.h  omMeshManager.cpp  omMeshManager.h  omMeshManagers.hpp  omMeshParams.hpp  omMeshSegmentList.cpp  omMeshSegmentList.h  omMeshSegmentListThread.cpp  omMeshSegmentListThread.h  omMeshSource.cpp  omMeshSource.h  omMeshTypes.h  omMeshTypes.hpp  omMesher.cpp  omMesher.h  omMipChunkMesher.cpp  omMipChunkMesher.h  omMipMesh.cpp  omMipMesh.h  omMipMeshCoord.cpp  omMipMeshCoord.h  omMipMeshManager.cpp  omMipMeshManager.h  omMipMeshManagers.hpp  omVolumeCuller.cpp  omVolumeCuller.h  (+7 more)
omni/src/network/: omAssembleTilesIntoSlice.cpp  omAssembleTilesIntoSlice.hpp  omClient.hpp  (+17 more)
omni/tests/: fakeMemMapFile.hpp  onDiskTests.hpp  testUtils.hpp  tests.hpp
(+4074 files in other folders)
